--- a/TravelAgency/src/main/resources/application.yml
+++ b/TravelAgency/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:sqlserver://travelagencydb.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:sqlserver://travelagencydb.database.windows.net:1433;databaseName=Travel_Agency_DB;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    username: sqladmin
+    password: qazWSX123
   jpa:
     show-sql: true
     hibernate:
