--- a/TravelAgency/pom.xml
+++ b/TravelAgency/pom.xml
@@ -31,6 +31,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-storage-blob</artifactId>
+			<version>12.14.0</version> <!-- Use the latest version available -->
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
