--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.31",
     "@mui/material": "^5.15.4",
     "@testing-library/jest-dom": "^5.17.0",
