PayPal bez redicert i zmiany sandbox account

--- a/keycloak.conf
+++ b/keycloak.conf
@@ -12,7 +12,7 @@ db-username=${DB_USERNAME}
 db-password=${DB_PASSWORD}
 
 # The full database JDBC URL. If not provided, a default URL is set based on the selected database vendor.
-db-url=jdbc:sqlserver://travelagencydb.database.windows.net:1433;databaseName=keycloak
+db-url=jdbc:sqlserver://travelagency.database.windows.net:1433;databaseName=keycloak
 
 # Observability
 
