--- a/keycloak.conf
+++ b/keycloak.conf
@@ -3,16 +3,16 @@
 # Database
 
 # The database vendor.
-db=${DB_SERVER}
+db=change_me
 
 # The username of the database user.
-db-username=${DB_USERNAME}
+db-username=change_me
 
 # The password of the database user.
-db-password=${DB_PASSWORD}
+db-password=change_me
 
 # The full database JDBC URL. If not provided, a default URL is set based on the selected database vendor.
-db-url=jdbc:sqlserver://travelagency.database.windows.net:1433;databaseName=keycloak
+db-url=change_me
 
 # Observability
 
